--- a/group_assignment1/.vscode/settings.json
+++ b/group_assignment1/.vscode/settings.json
@@ -1,15 +1,14 @@
 {
-    "python.testing.pytestArgs": [
-        "tests"
-    ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "files.exclude": {
-        "**/__pycache__": true,
-        "**/.pytest_cache": true,
-    },
-    "python.analysis.extraPaths": [
-        "src"
-    ],
-    "testing.automaticallyOpenPeekView": "never"
+  "python.testing.pytestArgs": ["tests"],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true,
+  "files.exclude": {
+    "**/__pycache__": true,
+    "**/.pytest_cache": true
+  },
+  "python.analysis.extraPaths": ["src"],
+  "testing.automaticallyOpenPeekView": "never",
+  "python-envs.defaultEnvManager": "ms-python.python:conda",
+  "python-envs.defaultPackageManager": "ms-python.python:conda",
+  "python-envs.pythonProjects": []
 }
